fix align

--- a/task1.css
+++ b/task1.css
@@ -31,21 +31,17 @@ section{
 	box-sizing: border-box;
 }
 .price-item-slogan{
-	position: absolute;
   	font-size: 30px;
   	font-weight: 400;
-    left: 50px;
-    bottom: 50px;
     text-align: left;
+    transform: translate(11%,5px);
 }
 .price-item-price{
-	position: absolute;
 	background: #393d50;
 	height: 122px;
 	width: 122px;
 	border-radius: 100%;
-	top: -23%;
-    left: 10%;	
+	transform: translate(50%,-51%);
 }
 .price-item-content .basic{
 	border-right: none;
@@ -130,7 +126,7 @@ section{
   	text-decoration: none;
  	 border-radius: 30px;
 	margin-right: 210px;
-	transition: width 1s;
+	transition: width 2s;
 }
 .price-item.button a:hover{
 	background-color:#2c2e3d;
@@ -142,10 +138,10 @@ section{
 .advance .price-item-title{
 	background-color: #1c94ca;
 }
-.advance .price-item-slogan{
+/*.advance .price-item-slogan{
 	padding-bottom: 30px;
 	bottom: 70px;
-}
+}*/
 .advance .title{
 	background-color: #1c94ca;
 }
@@ -157,8 +153,9 @@ section{
 }
 .price-item-spe{
 	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 14px;
-	position: absolute;
-    left: 39px;
-    bottom: 37px;
+	font-size: 16px;
+}
+#slogan{
+	position:absolute;
+	bottom:35px;
 }
